Add ability to use multiple dialects (#3)
* feat: add dialect functionality and basic spring implementation for it

* feat: add request parameters

* fix: correct imports, allow spring controllers to use annotations

* fix: move generation of converters to generated services

* fix: allow services to be loaded properly

* fix: correct code smells

* feat: add javadocs

* feat: add docs for dialects

* feat: add docs for dialects

* fix: correct javadoc